--- a/less/header.less
+++ b/less/header.less
@@ -91,10 +91,9 @@
 
       // Mobile:
         max-width: 35%;
-        padding-left: floor(@grid-gutter-width / 2);
+        padding-left: 0;
       @media (min-width: @screen-xs-min) {
         width: 180px;
-        padding-left: floor(@grid-gutter-width / 2);
         padding-right: @grid-gutter-width;
       }
 
